; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/spi/extr_pxa2xx_spi.c_wait_dma_channel_stop.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/spi/extr_pxa2xx_spi.c_wait_dma_channel_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@loops_per_jiffy = common dso_local global i32 0, align 4
@DCSR_STOPSTATE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @wait_dma_channel_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wait_dma_channel_stop(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @loops_per_jiffy, align 4
  %5 = shl i32 %4, 1
  %6 = sext i32 %5 to i64
  store i64 %6, i64* %3, align 8
  br label %7

7:                                                ; preds = %19, %1
  %8 = load i32, i32* %2, align 4
  %9 = call i32 @DCSR(i32 %8)
  %10 = load i32, i32* @DCSR_STOPSTATE, align 4
  %11 = and i32 %9, %10
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %17, label %13

13:                                               ; preds = %7
  %14 = load i64, i64* %3, align 8
  %15 = add i64 %14, -1
  store i64 %15, i64* %3, align 8
  %16 = icmp ne i64 %15, 0
  br label %17

17:                                               ; preds = %13, %7
  %18 = phi i1 [ false, %7 ], [ %16, %13 ]
  br i1 %18, label %19, label %21

19:                                               ; preds = %17
  %20 = call i32 (...) @cpu_relax()
  br label %7

21:                                               ; preds = %17
  %22 = load i64, i64* %3, align 8
  %23 = trunc i64 %22 to i32
  ret i32 %23
}

declare dso_local i32 @DCSR(i32) #1

declare dso_local i32 @cpu_relax(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
